--- a/cosmetics/templates/cosmetics/cosmetic_list.html
+++ b/cosmetics/templates/cosmetics/cosmetic_list.html
@@ -21,7 +21,9 @@
           <div class="col-lg-3 col-md-6 mb-4">
             <div class="card">
               <div class="bg-image hover-zoom ripple ripple-surface ripple-surface-light" data-mdb-ripple-color="light">
+                {% if item.image %}
                 <img src="{{ item.image.url }}" class="w-100" />
+                {% endif %}
                 <a href="{{ item.get_cosmetic_absolute_url }}">
                   <div class="mask">
                     <div class="d-flex justify-content-start align-items-end h-100">
