--- a/snail/templates/snail/snippet/snail_carousel.html
+++ b/snail/templates/snail/snippet/snail_carousel.html
@@ -1,10 +1,17 @@
 {% load static %}
+<style>
+  .img-shape {
+    object-fit: cover;
+    width: 100%;
+    height: auto;
+  }
+</style>
 
 
 <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-mdb-ride="carousel" style="margin-top: 70px;
   margin-left:auto;
   margin-right:auto;
-  width: 90%;">
+  width: 100%;">
   <div class="carousel-indicators">
     <button type="button" data-mdb-target="#carouselExampleCaptions" data-mdb-slide-to="0" class="active"
       aria-current="true" aria-label="Slide 1"></button>
@@ -13,9 +20,9 @@
     <button type="button" data-mdb-target="#carouselExampleCaptions" data-mdb-slide-to="2"
       aria-label="Slide 3"></button>
   </div>
-  <div class="carousel-inner" style="height: 80vh">
+  <div class="carousel-inner" style="height: 50vh">
     <div class="carousel-item active">
-      <img src="{% static 'images/cream-2.jpeg' %}" class="w-100" alt="Snail" style="border-radius: 20px;" />
+      <img src="{% static 'images/cream-2.jpeg' %}" class="img-shape" alt="Snail" />
       <!-- <div class="mask" style="background-color: rgba(0, 0, 0, 0.4)"></div>
       <div class="carousel-caption d-none d-sm-block mb-5">
         <h1 class="mb-4">
@@ -39,7 +46,7 @@
       </div> -->
     </div>
     <div class="carousel-item">
-      <img src="{% static 'images/cream-1.jpeg' %}" class="w-100" alt="Cream" style="border-radius: 20px;" />
+      <img src="{% static 'images/cream-1.jpeg' %}" class="img-shape" alt="Cream" />
       <!-- <div class="mask" style="background-color: rgba(0, 0, 0, 0.4)"></div>
       <div class="carousel-caption d-none d-md-block mb-5">
         <h1 class="mb-4">
@@ -63,7 +70,7 @@
       </div> -->
     </div>
     <div class="carousel-item">
-      <img src="{% static 'images/cream-2.jpeg' %}" class="w-100" alt="Cream" style="border-radius: 20px;" />
+      <img src="{% static 'images/cream-2.jpeg' %}" class="img-shape" alt="Cream" />
       <!-- <div class="mask" style="background-color: rgba(0, 0, 0, 0.4)"></div>
       <div class="carousel-caption d-none d-md-block mb-5">
         <h1 class="mb-4">
