--- a/templates/snippet/footer.html
+++ b/templates/snippet/footer.html
@@ -7,69 +7,68 @@
 {% endblock extra_head %}
 
 <footer class="text-center text-white mt-4" style="background-color: #607D8B">
-  <div class="row p-5 bg-secondary text-center">
-    <div class="col-md">
-      <div class="">
-        <p>
-          <!-- <a href="/account" title="/account">My Account</a> -->
-          <!-- <br> -->
-          <a href="mailto:press@shopmakari.com?subject=Makari Press Inquiries" target="_blank"
-            title="mailto:press@shopmakari.com?subject=Makari Press Inquiries">Press Inquiries<br>
-          </a>
-          <a href="#" title="Wholesale Application">Wholesale</a>
-          <br>
-          <a href="#" title="Store Locator">Shop Local</a>
-        </p>
-      </div>
+  <div class="row p-5 text-center">
+    <div class="col">
+      <p>
+        <!-- <a href="/account" title="/account">My Account</a> -->
+        <!-- <br> -->
+        <a href="mailto:mosel4real@gmail.com?subject=S&T Press Inquiries" target="_blank"
+          title="mailto:mosel4real@gmail.com?subject=S&T Press Inquiries">Press Inquiries<br>
+        </a>
+        <a href="#" title="Wholesale Application">Wholesale</a>
+        <br>
+        <a href="#" title="Store Locator">Shop Local</a>
+      </p>
     </div>
-    <div class="col-md">
-      <div class="">
-        <p>
-          <a href="/contact/" title="Contact Makari">Contact Us</a>
-          <br>
-          <a href="#" title="General FAQ">General FAQ</a>
-          <br>
-          <!-- <a href="#" title="Shipping And Return Policy">Shipping &amp; Returns</a>
-        <br> -->
-          <a href="/contact/" title="Why Makari?">Why S&T Production?</a>
-        </p>
-      </div>
+
+    <div class="col">
+      <p>
+        <a href="/contact/" title="Contact Makari">Contact Us</a>
+        <br>
+        <a href="/about/" title="General FAQ">General FAQ</a>
+        <br>
+        <!-- <a href="#" title="Shipping And Return Policy">Shipping &amp; Returns</a>
+              <br> -->
+        <a href="/contact/" title="Why Makari?">Why S&T Production?</a>
+      </p>
     </div>
-    <div class="col-md">
+
+    <div class="col">
       <div class="footer-block__details-content rte">
         <p>More<br>
           <a href="{% url 'snail:order-summary' %}" title="/cart">View Your Cart</a>
           <br>
-          <a href="/contact/privacy-policy" title="Privacy Policy">Privacy Policy</a>
+          <a href="{% url 'snail:privacy-policy' %}" title="Privacy Policy">Privacy Policy</a>
         </p>
       </div>
     </div>
-  </div>
 
-  <div class="container">
+
     <section class="mb-2">
       <!-- Facebook -->
-      <a class="btn-link btn-floating btn-lg text-white" href="#!" role="button" data-mdb-ripple-color="dark"><i
-          class="fab fa-facebook-f"></i></a>
+      <a class="btn-link btn-floating btn-lg text-white"
+        href="https://www.facebook.com/profile.php?id=100027949103868&mibextid=ZbWKwL" role="button"
+        data-mdb-ripple-color="dark"><i class="fab fa-facebook-f"></i></a>
 
       <!-- Twitter -->
-      <a class="btn-link btn-floating btn-lg text-white" href="#!" role="button" data-mdb-ripple-color="dark"><i
-          class="fab fa-twitter"></i></a>
+      <!-- <a class="btn-link btn-floating btn-lg text-white" href="#!" role="button" data-mdb-ripple-color="dark"><i
+          class="fab fa-twitter"></i></a> -->
 
       <!-- Google -->
-      <a class="btn-link btn-floating btn-lg text-white" href="#!" role="button" data-mdb-ripple-color="dark"><i
-          class="fab fa-google"></i></a>
+      <!-- <a class="btn-link btn-floating btn-lg text-white" href="#!" role="button" data-mdb-ripple-color="dark"><i
+          class="fab fa-google"></i></a> -->
 
       <!-- Instagram -->
-      <a class="btn-link btn-floating btn-lg text-white" href="#!" role="button" data-mdb-ripple-color="dark"><i
-          class="fab fa-instagram"></i></a>
+      <a class="btn-link btn-floating btn-lg text-white"
+        href="https://instagram.com/s_and_t_snail_production?igshid=YmMyMTA2M2Y=" role="button"
+        data-mdb-ripple-color="dark"><i class="fab fa-instagram"></i></a>
 
       <!-- YouTube -->
       <a class="btn-link btn-floating btn-lg text-white" href="#!" role="button" data-mdb-ripple-color="dark"><i
           class="fab fa-youtube"></i></a>
       <!-- Github -->
-      <a class="btn-link btn-floating btn-lg text-white" href="#!" role="button" data-mdb-ripple-color="dark"><i
-          class="fab fa-github"></i></a>
+      <!-- <a class="btn-link btn-floating btn-lg text-white" href="#!" role="button" data-mdb-ripple-color="dark"><i
+          class="fab fa-github"></i></a> -->
     </section>
 
     <section>
@@ -77,7 +76,7 @@
     </section>
 
     <!-- Copyright  -->
-    <section class="p-3">
+    <section class="pt-3">
       <small>© 2018 Copyright:</small>
       <a class="text-white" href="https://www.sandtproduction.com/">Sandtproduction.com</a>
     </section>
