--- a/templates/snippet/navbar.html
+++ b/templates/snippet/navbar.html
@@ -9,21 +9,21 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent1">
-      <a class="navbar-brand mt-2 mt-sm-0" href="/snail/">
-        <img src="{% static 'images/logo.jpeg' %}" height="20" alt="Sandt Logo" />
+      <a class="navbar-brand mt-2 mt-sm-0" href="/">
+        <img src="{% static 'images/sandt-logo.jpeg' %}" height="50px" alt="Sandt Logo" class="rounded" />
       </a>
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item active">
           <a class="nav-link " href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/">About Sandtproduction</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link" href="{% url 'cosmetics:cosmetic-list' %}">Cosmetics</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/">Contact</a>
+          <a class="nav-link" href="{% url 'snail:about' %}">About Us</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'snail:contact' %}">Contact Us</a>
         </li>
       </ul>
       <!-- Left links -->
